Add MathJax CDN

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -17,6 +17,7 @@
   <link href="{{ '/assets/css/theme.css' | relative_url }}" rel="stylesheet">
   <link href="{{ '/assets/css/syntax.css' | relative_url }}" rel="stylesheet">
   <link href="{{ '/assets/css/font-awesome/css/font-awesome.min.css' | relative_url }}" rel="stylesheet">
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.0/MathJax.js?config=TeX-AMS-MML_HTMLorMML" type="text/javascript"></script>
 </head>
 
 <body>
